use cms design system

--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -13,6 +13,16 @@
  * require_tree .
  * require_self
  */
- @import "bootstrap";
+ // In our Gulp Sass task, we've added node_modules to the list of paths that
+// are used to resolve @import declarations, so we omit it from the path below.
+ @import '@cmsgov/design-system-core/src/index';
+ @import '@cmsgov/design-system-layout/src/index';
  @import "navbar";
  @import "sidenav";
+
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
