--- a/dpc-web/app/views/public/home.html.erb
+++ b/dpc-web/app/views/public/home.html.erb
@@ -1,14 +1,18 @@
-<div class="row">
-  <div class="mt-5 col-sm-3">
-    <ul class="nav flex-column sticky-top sidenav">
-      <li class="nav-item">
-        <a class="nav-link pt-0 pb-0 mb-3" href="#getting-started">Getting Started</a>
-        <a class="nav-link pt-0 pb-0 mb-3" href="#learned">What We've Learned</a>
-        <a class="nav-link pt-0 pb-0" href="#about-data">About the Data</a>
+<div class="ds-l-row">
+  <div class="ds-u-margin-top--5 ds-l-col--3">
+    <ul class="sidenav">
+      <li class="sidenav__item">
+        <a class="sidenav__link" href="#getting-started">Getting Started</a>
+      </li>
+      <li class="sidenav__item">
+        <a class="sidenav__link" href="#learned">What We've Learned</a>
+      </li>
+      <li class="sidenav__item">
+        <a class="sidenav__link" href="#about-data">About the Data</a>
       </li>
     </ul>
   </div>
-  <div class="col-sm-9">
+  <div class="ds-l-col--9 ds-u-margin-top--5">
     <h2>Overview</h2>
     <%= render partial: 'overview' %>
 
