link logo to site root

--- a/dpc-web/app/views/shared/_navbar.html.erb
+++ b/dpc-web/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="ds-l-container">
   <nav class="navbar navbar-light ">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/">
       <img src="/assets/site-logo.png" alt="CMS Logo">
     </a>
 
