Create API documents controller (#79)
* create api documents controller

* move docs page into controller, seperate out hero

* set up page titles

* link logo to site root

* rubocop cleanup

--- a/dpc-web/app/views/shared/_navbar.html.erb
+++ b/dpc-web/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="ds-l-container">
   <nav class="navbar navbar-light ">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/">
       <img src="/assets/site-logo.png" alt="CMS Logo">
     </a>
 
@@ -28,34 +28,4 @@
       </ul>
     </div>
   </nav>
-</div>
-
-<div class="hero">
-  <div class="ds-l-container">
-    <div class="ds-l-row">
-      <div class="ds-l-col--12">
-        <h1 class="ds-display">Data Point of Care API</h1>
-      </div>
-    </div>
-    <div class="ds-l-row ds-u-margin-top--3">
-      <div class="ds-l-col--8 ds-text--lead">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut scelerisque risus.
-        Sed mattis placerat ante sit amet auctor. Donec ut nibh lobortis, aliquet ligula quis,
-        consectetur nisl. Phasellus eget quam tempor, tempus ligula in, lobortis massa.
-        Nullam venenatis varius vestibulum.
-      </div>
-    </div>
-    <div class="ds-l-row ds-u-margin-top--7">
-      <div class="ds-l-col--4">
-        <a href="/">
-          <button type="button" class="ds-c-button ds-c-button--inverse ds-c-button--big">Read The User Guide →</button>
-        </a>
-      </div>
-      <div class="ds-l-col--4">
-        <a href="/">
-          <button type="button" class="ds-c-button ds-c-button--inverse ds-c-button--big">Sign up for the Beta →</button>
-        </a>
-      </div>
-    </div>
-  </div>
 </div>
