allow code blocks to wrap

--- a/dpc-web/app/assets/stylesheets/_rouge.scss.erb
+++ b/dpc-web/app/assets/stylesheets/_rouge.scss.erb
@@ -6,4 +6,9 @@
   background: #f2f2f2;
   margin-bottom: $spacer-1;
   padding: $spacer-1;
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;
 }
