--- a/dpc-web/app/assets/stylesheets/navbar.scss
+++ b/dpc-web/app/assets/stylesheets/navbar.scss
@@ -26,7 +26,7 @@
 }
 
 .hero {
-  background-color: $color-primary-darker;
+  background-color: $color-primary-darkest;
   color: $color-white;
   padding: $spacer-7 0;
 }
