--- a/dpc-web/app/views/layouts/application.html.erb
+++ b/dpc-web/app/views/layouts/application.html.erb
@@ -33,8 +33,17 @@
           </div>
         </div>
         <div class="ds-u-margin-top--7">
-          <a class="ds-c-button ds-c-button--big ds-c-button--success ds-u-margin-right--2">Request acccess</a>
-          <%= link_to "User guide", docs_path, :class => "ds-c-button ds-c-button--inverse ds-c-button--big", :id => "my-id" %>
+          <a class="ds-c-button ds-c-button--big ds-c-button--success ds-u-margin-right--2">
+            <svg class="ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 24 24">
+            <use xlink:href="/assets/solid.svg#key"></use>
+          </svg>
+          Request acccess</a>
+
+          <%= link_to docs_path, :class => "ds-c-button ds-c-button--inverse ds-c-button--big" do %>
+            <svg class="ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 24 24">
+              <use xlink:href="/assets/solid.svg#code"></use>
+            </svg>API documentation
+          <% end %>
         </div>
 
         <p class="ds-u-margin-top--7">Note: The Data at the Point of Care is currently a pilot program from CMS. <a href="#about-the-pilot">Learn more</a></p>
