--- a/dpc-web/app/views/public/home.html.erb
+++ b/dpc-web/app/views/public/home.html.erb
@@ -8,7 +8,7 @@
         <p>Tracking down medical history takes valuable time that can otherwise be spent with patients. Data at the point of care will allow providers to:</p>
       </div>
     </div>
-    <div class="ds-l-row">
+    <div class="ds-l-row ds-u-margin-top--5">
       <div class="ds-l-col--12 ds-l-md-col--4">
         <h3>Access medical history for new patients</h3>
         <p>Avoid having to rely on patient memory to know past diagnoses, procedures, and medications.</p>
