Jared/landing page content dpc 408 (#89)
* enter content on homepage, remove old partials

* font awesome icons

* move hero

* move hero css

* install svg4everybody for svg sprites in IE

--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -22,3 +22,5 @@
  @import "navbar";
  @import "sidenav";
  @import "components/footer";
+ @import "components/hero";
+ @import "components/site-blocks";
