--- a/dpc-web/app/views/layouts/application.html.erb
+++ b/dpc-web/app/views/layouts/application.html.erb
@@ -20,33 +20,7 @@
 
     <!-- hero -->
     <% if controller.controller_name == "public" %>
-    <div class="hero">
-      <div class="ds-l-container">
-        <div class="ds-l-row">
-          <div class="ds-l-col--12">
-            <h1 class="ds-display">Data Point of Care API</h1>
-          </div>
-        </div>
-        <div class="ds-l-row ds-u-margin-top--3">
-          <div class="ds-l-col--8 ds-text--lead">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut scelerisque risus.
-            Sed mattis placerat ante sit amet auctor. Donec ut nibh lobortis, aliquet ligula quis,
-            consectetur nisl. Phasellus eget quam tempor, tempus ligula in, lobortis massa.
-            Nullam venenatis varius vestibulum.
-          </div>
-        </div>
-        <div class="ds-l-row ds-u-margin-top--7">
-          <div class="ds-l-col--4">
-            <a href="/">
-              <a class="ds-c-button ds-c-button--inverse ds-c-button--big">Sign up for the Beta →</a>
-            </a>
-          </div>
-          <div class="ds-l-col--4">
-            <%= link_to "API Docs", docs_path, :class => "ds-c-button ds-c-button--inverse ds-c-button--big", :id => "my-id" %>
-          </div>
-        </div>
-      </div>
-    </div>
+      <%= render partial: 'public/hero' %>
     <% else %>
     <div class="ds-l-container">
       <div class="ds-l-row">
@@ -58,9 +32,14 @@
     <% end %>
 
     <!-- content -->
+    <% if controller.controller_name == "public" %>
+      <%= yield %>
+    <% else %>
     <section class="ds-l-container" id="main">
       <%= yield %>
     </section>
+    <% end %>
+
 
     <%= render partial: 'shared/footer' %>
 
