update landing page design
more work on landing page

accordions

Use Roboto

css fixes for IE

navbar

top nav

mobile fixes

mobile friendly process list

benefit prop mobile friendly

hero and benefit prop ie fixes

move accordion js to vendor assets

IE11 fix

--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -19,8 +19,17 @@
  @import '@cmsgov/design-system-core/src/index';
  @import '@cmsgov/design-system-layout/src/index';
  @import "rouge";
- @import "navbar";
  @import "sidenav";
+ @import "settings/font-faces";
+ @import "settings/variables";
+ @import "base/base";
+ @import "components/accordions";
+ @import "components/benefit-prop";
+ @import "components/billboard";
+ @import "components/buttons";
  @import "components/footer";
  @import "components/hero";
+ @import "components/navbar";
+ @import "components/pills";
+ @import "components/process-list";
  @import "components/site-blocks";
