--- a/dpc-web/app/views/shared/_footer.html.erb
+++ b/dpc-web/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="ds-base ds-u-fill--white ds-u-margin-top--7 ds-u-padding-y--6 site-footer" role="contentinfo">
+<footer class="ds-base ds-u-fill--white ds-u-padding-y--6 site-footer" role="contentinfo">
   <div class="ds-l-container">
     <div class="ds-l-row">
       <div class="ds-u-font-size--small ds-l-col--12 ds-l-sm-col--6 ds-l-md-col--6 ds-u-margin-bottom--2">
