--- a/dpc-web/app/assets/stylesheets/components/_site-blocks.scss
+++ b/dpc-web/app/assets/stylesheets/components/_site-blocks.scss
@@ -26,6 +26,10 @@
 
 .site-block--alt {
   background-color: $color-primary-alt-lightest;
+
+  a {
+    color: $color-primary-darker;
+  }
 }
 
 .site-block-header * {
