Implement landing page design (#109)
* update landing page design

more work on landing page

accordions

Use Roboto

css fixes for IE

navbar

top nav

mobile fixes

mobile friendly process list

benefit prop mobile friendly

hero and benefit prop ie fixes

move accordion js to vendor assets

IE11 fix

* fix a11y errors

--- a/dpc-web/app/views/layouts/application.html.erb
+++ b/dpc-web/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>
       <%= content_for?(:title) ? yield(:title) : 'CMS.gov' %> | Data at the Point of Care
@@ -8,7 +8,6 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
   </head>
 
   <body class="ds-base">
@@ -42,6 +41,8 @@
 
 
     <%= render partial: 'shared/footer' %>
+
+    <%= javascript_include_tag 'application' %>
 
   </body>
 </html>
