--- a/dpc-web/app/views/shared/_navbar.html.erb
+++ b/dpc-web/app/views/shared/_navbar.html.erb
@@ -1,3 +1,5 @@
+<a class="ds-c-skip-nav" href="#main">Skip to main content</a>
+
 <nav class="navbar" id="navbar">
   <a class="site-logo" href="/">
     <%= image_tag("top-nav-heart.svg", alt: "Heart logo") %> <span class="site-logo-text">Data at the Point of Care</span>
