sidenav page design

--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -30,6 +30,7 @@
  @import "components/footer";
  @import "components/hero";
  @import "components/navbar";
+ @import "components/page-headers";
  @import "components/pills";
  @import "components/process-list";
  @import "components/site-blocks";
