--- a/dpc-web/app/assets/stylesheets/sidenav.scss
+++ b/dpc-web/app/assets/stylesheets/sidenav.scss
@@ -3,6 +3,11 @@
   top: $spacer-5;
   list-style: none;
   padding: 0;
+
+  @media (min-width: $width-md) {
+    position: sticky;
+    top: $spacer-5;
+  }
 }
 
 .sidenav__item {
